--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <h3>Let's grab a beer 🍻</h3>
+      <h3>Let's meet for a cup of tea ☕</h3>
       <p class="msg">Big fan of Heineken just like me? then let's grab one on of the open terrace and go crazy on coding </p>
       <a class="btn" href="mailto:ruturajshinde888@gmail.com">CONTACT ME</a>
     </div>
